[gd_scene load_steps=6 format=3 uid="uid://c15hx0bu2oe6w"]

[ext_resource type="Script" uid="uid://d0fv3tdvfqe4x" path="res://Scenes/upgrade_system.gd" id="1_vu38r"]
[ext_resource type="Theme" uid="uid://bfp08hmhenri4" path="res://themes/Elmero.tres" id="2_q2e8n"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_vu38r"]
lifetime_randomness = 0.5
spread = 180.0
initial_velocity_max = 50.0
scale_min = 0.1
collision_mode = 1
collision_friction = 0.0
collision_bounce = 1.0
collision_use_scale = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_q2e8n"]
albedo_color = Color(1, 0.890196, 0.364706, 1)
emission_enabled = true
emission = Color(1, 0.890196, 0.364706, 1)
emission_energy_multiplier = 21.39

[sub_resource type="SphereMesh" id="SphereMesh_gxvyi"]
material = SubResource("StandardMaterial3D_q2e8n")

[node name="UpgradeSystem" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vu38r")

[node name="Button1" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 220.0
offset_top = 178.0
offset_right = 495.0
offset_bottom = 302.0
grow_vertical = 2
theme = ExtResource("2_q2e8n")
text = "Funciona?"

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -515.0
offset_top = 178.0
offset_right = -240.0
offset_bottom = 302.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("2_q2e8n")
text = "Funciona?"

[node name="Node3D" type="Node3D" parent="."]

[node name="GPUParticles3D" type="GPUParticles3D" parent="Node3D"]
emitting = false
amount = 100
lifetime = 5.0
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_vu38r")
draw_pass_1 = SubResource("SphereMesh_gxvyi")

[connection signal="pressed" from="Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
